05 Dienste erreichbar machen/04 Reverse Proxy als Zugangspunkt/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nicholasdille/nginx-hello
        ports:
        - name: web
          containerPort: 80
