05 Dienste erreichbar machen/04 Reverse Proxy als Zugangspunkt/app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: web
