05 Dienste erreichbar machen/04 Reverse Proxy als Zugangspunkt/traefik-dashboard.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dille.io
      http:
        paths:
          - backend:
              serviceName: traefik
              servicePort: 8080
